# Klenalo

./: .gitignore  CMakeLists.txt  Readme.md
lib/lvgl/include/lvgl/: lv_conf.h
lib/nuklear/include/: nuklear_sdl_renderer.h
res/: font.txt  fonts.txt
src/: avltree.c  avltree.h  barrier.c  barrier.h  conditionObserver.c  conditionObserver.h  consts.c  consts.h  crypto.c  crypto.h  defs.c  defs.h  hashMap.c  hashMap.h  hashtable.c  hashtable.h  input.c  input.h  lifecycle.c  lifecycle.h  list.c  list.h  loginScene.c  main.c  net.c  net.h  redBlackTree.c  redBlackTree.h  resources.c  resources.h  rwMutex.c  rwMutex.h  scenes.c  scenes.h  splashScene.c  treeMap.c  treeMap.h  video.c  video.h  xlvgl.c  (+1 more)
src/collections/: _CMakeLists._txt  deque.c  deque.h  hashtable.c  hashtable.h  list.c  list.h  treeMap.c  treeMap.h
src/core/: lifecycle.c  lifecycle.h  main.c
src/crypto/: crypto.c  crypto.h
src/integration/: input.c  resources.c  video.c  xlvgl.c  xlvgl.h
src/networking/: net.c
src/render/: render.c  render.h  xnuklear.c  xnuklear.h  xnuklearDefs.h
src/scenes/: loginScene.c  loginScene.h  scenes.c  splashScene.c  splashScene.h
src/utils/: barrier.h  conditionObserver.c  conditionObserver.h  rwMutex.c  rwMutex.h
tests/: collectionsDeque.c  collectionsHashtable.c  collectionsList.c  main.c  testCollections.c  testCollectionsList.c  testCrypto.c  testMain.c
